syntax = "proto3";

package auth;

option go_package = "./gen;auth";

service AuthService {
  rpc StreamData (stream StreamRequest) returns (stream StreamResponse);
}

message StreamRequest {
  string client_id = 1;
  string request_data = 2;
}

message StreamResponse {
  string client_id = 1;
  string response_data = 2;
}
